# renamore

./: Cargo.toml  README.md
src/: lib.rs  linux.rs  macos.rs  tests.rs  windows.rs
