[package]
name = "renamore"
version = "0.3.2"
authors = ["Indiana Kernick <indiana.kernick@gmail.com>"]
description = "More ways to rename files."
categories = ["filesystem"]
keywords = ["rename", "file"]
homepage = "https://github.com/indianakernick/renamore"
repository = "https://github.com/indianakernick/renamore"
documentation = "https://docs.rs/renamore"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
libc = "0.2.177"

[dev-dependencies]
tempfile = "3"

[features]
# Kept for compatibility with older releases. Linux support no longer needs
# build-time probing.
always-supported = []
always-fallback = []
